# elegoo-starter

./: .gitignore
00_blink/: README.md  avr-gcc-toolchain.cmake  blink.c
02_blink/: CMakeLists.txt  README.md  run.sh
03_LED/: README.md
03_led/: README.md
04_rgb_led/: CMakeLists.txt  README.md
04_rgb_led/scripts/: run.sh
04_rgb_led/src/: rgb_led.c
05_digital_inputs/: README.md  avr-gcc-toolchain.cmake
05_digital_inputs/scripts/: run.sh
05_digital_inputs/src/: main.c
06_active_buzzer/: README.md
06_active_buzzer/src/: main.c
07_passive_buzzer/: README.md  avr-gcc-toolchain.cmake
07_passive_buzzer/src/: main.c
07_passive_buzzer_extra/: CMakeLists.txt  README.md
07_passive_buzzer_extra/src/: main.c
docs/elegoo_starter_docs/code/Lesson 22 Relay/Relay/: Relay.ino
docs/elegoo_starter_docs/code/Lesson 4 RGB LED/RGB_LED/: RGB_LED.ino
